# c-on-azure-appservice-cat-generator

./: CMakeLists.txt  Dockerfile  Readme.md
src/: cat-api.c  main.c
